[project]
name = "social-media-downloader"
version = "0.1.0"
description = "Social Media Downloader"
authors = [{ name = "Yurii Karabas", email = "1998uriyyo@gmail.com" }]
requires-python = ">=3.10.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.6.4",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.3",
    "async-timeout>=4.0.3",
    "typing-extensions>=4.10.0",
    "playwright>=1.43.0",
    "pillow>=10.3.0",
    "twitter-api-client>=0.10.22",
    "more-itertools>=10.2.0",
    "pytubefix==9.2.2",
    "pycryptodome>=3.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.3.3,<0.4",
    "mypy>=1.9.0,<2",
    "pre-commit>=3.6.2,<4",
    "types-beautifulsoup4>=4.12.0.20240229,<5",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["social_media_downloader"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "COM", # flake8-commas
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TRY", # tryceratops
    "RUF", # ruff specific rules
]
ignore = [
    "S101",  # use of assert detected
    "TRY003", # allow long exc message
    "COM812", # will be handled by ruff format
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
strict = true
follow_imports = "normal"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
